--- a/healthcare_data_faker_nb.ipynb
+++ b/healthcare_data_faker_nb.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5c853dc5",
    "metadata": {},
    "outputs": [],
@@ -107,8 +107,16 @@
     "\n",
     "# Assuming 'mock_data' is your list of dictionaries\n",
     "with open('patient_data.json', 'w') as f:\n",
-    "    json.dump(patient_data, f, indent=4)# Save the mock data to a JSON file"
+    "    json.dump(patient_data, f, indent=4, cls=CustomJSONEncoder)# Save the mock data to a JSON file"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25f19496",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
