--- a/api_calling_nb.ipynb
+++ b/api_calling_nb.ipynb
@@ -370,6 +370,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a52a4aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IBM: 239.6214\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "def get_stock_data():\n",
+    "    url = \"https://www.alphavantage.co/query?function=TIME_SERIES_INTRADAY&symbol=IBM&interval=5min&outputsize=full&apikey=demo\"\n",
+    "    response = requests.get(url)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        last_refreshed = data[\"Meta Data\"][\"3. Last Refreshed\"]\n",
+    "        price = data[\"Time Series (5min)\"][last_refreshed][\"1. open\"]\n",
+    "        return price\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "price = get_stock_data()\n",
+    "symbol = \"IBM\"\n",
+    "if price is not None:\n",
+    "    print(f\"{symbol}: {price}\")\n",
+    "else:\n",
+    "    print(\"Failed to retrieve data.\")"
+   ]
   }
  ],
  "metadata": {
